# azgard

./: .gitignore  README.md  video.md
ai/: Dockerfile.qwen3-tts-sm120  docker-compoase.yml  docker-compose.yml  openvoice-usage.md  readme.md  setup-win-wsl.md  start.sh
ai/openvoice-adapter/: Dockerfile  main.py  requirements.txt
camera/: 1.txt
car-detect/: Dockerfile  docker-compose.yml  install.md  readme.md
car-detect/app/: recognize.py
ha/: .gitignore  Dockerfile  configuration.yaml  docker-compose.yml  install_docker.sh  istall_ha.sh  readme.md  ssl.md
ha/config/: automations.yaml  automations2.yaml  configuration.yaml  secrets.yaml
ha/design/: 1.txt  panel.yaml
ha/esphome/: secrets.yaml
ha/nut/: Dockerfile  run-nut.sh  ups.conf  upsd.users  upsmon.conf
npu/: Dockerfile  README.md  hf-download.sh  hf-reset.sh  preload-model.sh  requirements.txt
npu/app/: config.py  hf_console.py  hf_progress.py  main.py  model.py  preload.py  schemas.py
npu/app/static/: index.html
nut/: 12.md  README.md  autooff.yml  dashbord.yaml  esphome.yml  log.yml  notify.yml  prompt.md  qwen.md  readme.md
watter/: link.md
watter/src/: Control_other.h  ESP8266my.ino  h_switch.h  handles.h  upg_spiffs.h
watter/src2/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
watter/src2/main/: CMakeLists.txt  idf_component.yml  main.c  zb_signal_handler.c
wifi/: readme.md
